# ros2_martha

./: README.md
igus_axis_description/: CMakeLists.txt  package.xml
igus_axis_description/launch/: view_robot.launch.py
igus_axis_description/urdf/: axis.urdf  igus_axis.ros2_control.xacro  igus_axis.urdf.xacro  igus_axis_description.urdf.xacro  igus_axis_macro.xacro  igus_axis_standalone.urdf.xacro
igus_axis_driver/: CMakeLists.txt  igus_axis_driver.xml  package.xml
igus_axis_driver/bringup/config/: rrbot_controllers.yaml  rrbot_singleAxis_forward_position_publisher.yaml  rrbot_singleAxis_joint_trajectory_publisher.yaml
igus_axis_driver/bringup/launch/: rrbot.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
igus_axis_driver/hardware/: D1.cpp  singlebot.cpp
igus_axis_driver/hardware/include/igus_axis_driver/: D1.h  singlebot.hpp  visibility_control.h
igus_axis_driver/src/: axis_mover_service.cpp
igus_axis_interfaces/: CMakeLists.txt  package.xml
igus_axis_interfaces/srv/: SendFloat.srv
igus_axis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
igus_axis_moveit_config/config/: 2dof_robot.ros2_control.xacro  2dof_robot.srdf  2dof_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
igus_axis_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
log/: latest_mixin
martha_driver/: CMakeLists.txt  aha.txt  package.xml
martha_driver/config/: axis_controllers.yaml  martha_controllers.yaml  martha_new_controllers.yaml  test_axis_trajectory.yaml  test_axis_velocity.yaml  test_martha_trajectory.yaml  test_ur_martha_trajectory.yaml  test_velocity.yaml
martha_driver/launch/: axisOnly.launch.py  axis_control.launch.py  martha_complete.launch.py  martha_control.launch.py  martha_control_2.launch.py  martha_new.launch.py  test_axis_forward_vel_martha.launch.py  test_axis_martha.launch.py  test_forward_vel_martha.launch.py  test_martha.launch.py  test_prefix_joint_trajectory_controller.launch.py  test_ur_martha.launch.py  ur_control.launch.py  view_martha.launch.py
martha_driver/urdf/: martha.urdf.xacro  marthaEDIT.urdf.xacro  martha_converted.urdf
martha_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
martha_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  martha_robot.ros2_control.xacro  martha_robot.srdf  martha_robot.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
martha_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mv2_com/: CMakeLists.txt  package.xml
mv2_com/launch/: move_group.launch.py  move_group.rviz  move_group_interface.launch.py  move_group_interface_tutorial.launch.py  move_group_interface_ur.launch.py  movegroup_tutorial.rviz  mpserver.launch.py  mpserver.rviz
mv2_com/src/: mg_com_server.cpp  mg_com_server_ur.cpp  move_group_interface_tutorial.cpp  mv2_com_server.cpp  ur_mv2_com_server.cpp
mv2_com_interfaces/: CMakeLists.txt  package.xml
mv2_com_interfaces/srv/: MovePose.srv
mv_py/: package.xml  setup.cfg  setup.py
mv_py/launch/: motion_planning_ur.launch.py
mv_py/mv_py/: mp_api_2.py  mp_client.py
robocom/: README.md  package.xml  record_configuration.xml  setup.cfg  setup.py
robocom/launch/: robot_communication_launch.py  robot_communication_noreceiver_launch.py  robot_communication_noreceiver_noclm_launch.py  robot_communication_noreceiver_noclm_nocem_launch.py
robocom/playground/: client.py  host.py  ocv.py  sendtourdirect.py  server.py
robocom/robocom/: command_execution_manager.py  command_list_manager.py  command_list_manager_2.py  external_command_receiver.py  gripper_execution_node.py  manager_to_gripper_service.py  move_command_handler.py  queueshouter.py  robot_execution_node.py  robot_looper.py  rtde_state_publisher.py  service_in_service_test.py
robocom/robocom/archive/: command_execution_manager.py  command_execution_manager_2_back.py  external_command_receiver_back.py  gripper_order_execution_node.py  gripper_order_service_execution_node.py  rtde_state_publisher_back.py
robocom_msgs/: CMakeLists.txt  README.md  package.xml
robocom_msgs/action/: FollowGripper.action
robocom_msgs/srv/: MoveGripper.srv  MoveRobot.srv  RequestOCV.srv  SendOrderReturnResult.srv
ur10e_description/launch/: view_ur.launch.py
ur10e_description/test/: test_view_ur_launch.py
ur10e_description/urdf/: ur.urdf.xacro  ur_conform.urdf.xacro  ur_description.urdf.xacro  ur_gazebo.xacro  ur_macro.xacro
ur10e_description_x/: CMakeLists.txt  package.xml
ur10e_description_x/launch/: view_ur.launch.py
ur10e_description_x/test/: test_ur_urdf_xacro.py
ur10e_description_x/urdf/: ur.urdf.xacro  ur_macro.xacro
ur_controllers/: CMakeLists.txt
ur_moveit_config/config/: controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur.srdf
ur_moveit_config/launch/: ur_extruder_move_group_interface.launch.py  ur_extruder_moveit.launch.py  ur_move_group_interface.launch.py  ur_moveit.launch.py  ur_moveit_newtry.launch.py  ur_moveit_no_movegroup.launch.py
ur_moveit_config/srdf/: ur_extruder.srdf.xacro  ur_extruder_macro.srdf.xacro
ur_robot_driver/config/: test_goal_publishers_config.yaml  test_velocity_goal_publishers_config.yaml  ur_controllers.yaml
ur_robot_driver/launch/: test_joint_trajectory_controller.launch.py  test_prefix_joint_trajectory_controller.launch.py  ur10e.launch.py  ur_control.launch.py  ur_control_mod.launch.py  ur_extruder.launch.py
